--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>random</title>
 </head>
 <body>
-    
+
+    <p>this is random</p>
 </body>
 </html>
